--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,23 @@
 cmake_minimum_required(VERSION 3.13 FATAL_ERROR)
-
-set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
-
 project(hash_server)
 
+###########################
+# Config
+###########################
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")
 project(${PROJECT_NAME} LANGUAGES CXX)
+enable_testing()
 
+###########################
+# Packages
+###########################
+set(Boost_USE_MULTITHREADED TRUE)
+set(Boost_USE_STATIC_LIBS TRUE)
+find_package(Boost 1.66.0 REQUIRED system unit_test_framework)
+
+###########################
+# Subprojects
+###########################
 add_subdirectory(lib)
 add_subdirectory(app)
+add_subdirectory(test)
