--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,12 +13,25 @@ add_executable(${PROJECT_NAME}
 set_target_properties(${PROJECT_NAME} PROPERTIES
   DEBUG_POSTFIX "_debug"
 )
+if (NOT MSVC)
+  find_package(Threads REQUIRED)
+  if(THREADS_HAVE_PTHREAD_ARG)
+    target_compile_options(${PROJECT_NAME} PUBLIC "-pthread")
+  endif()
+  if(CMAKE_THREAD_LIBS_INIT)
+    target_link_libraries(${PROJECT_NAME} "${CMAKE_THREAD_LIBS_INIT}")
+  endif()
+
+  set_target_properties(${PROJECT_NAME} PROPERTIES BUILD_WITH_INSTALL_RPATH TRUE)
+  set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH ".")
+endif()
 
 ###########################
 # Libraries
 ###########################
 target_link_libraries(${PROJECT_NAME}
   sub::lib
+  ${Boost_LIBRARIES}
 )
 
 ###########################
